// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper function: getIcon renders correctly 1`] = `
<View
  activated={false}
  defaultActivatedColor="#53C000"
  defaultColor="#b8b8b8"
  name="backButton"
  size={100}
>
  <Svg />
</View>
`;

exports[`Helper function: getIcon renders with activated parameter 1`] = `
<View
  activated={true}
  defaultActivatedColor="#53C000"
  defaultColor="#b8b8b8"
  name="backButton"
  size={100}
>
  <Svg />
</View>
`;

exports[`Helper function: getIcon renders with color parameter 1`] = `
<View
  activated={false}
  defaultActivatedColor="#53C000"
  defaultColor="#122E46"
  name="backButton"
  size={100}
>
  <Svg />
</View>
`;
